
    AVRO-540. Java: Make GenericArray reversible.  (Eric Evans via cutting)

    AVRO-543. Schema comparison is hella slow on the Ruby side. (jmhodges)

    AVRO-560. Python impl should include system errors in every protocol (hammer)

    AVRO-559. Handle read_union error where the list index of the union branch 
    to follow exceeds the size of the union schema (hammer)

  BUG FIXES
    AVRO-461. Skipping primitives in the ruby side (jmhodges)

    AVRO-489. Skipping complex objects in the ruby impl. (jmhodges)

    AVRO-502. Memory leak from parsing JSON schema.
    (Robert G. Jakabosky via massie)

    AVRO-496. python sample_http_client.py is broken (Jeff Hodges via hammer)

    AVRO-515. Fix build and compatibility problems. (sbanacho)

    AVRO-516. Ruby socket RPC should use big endian buffer lengths.
    (jmhodges)

    AVRO-518. Add link to boost filesystem library.  (John Plevyak via sbanacho)

    AVRO-527. Undefined variable "schm" error (Esteve Fernandez via hammer)

    AVRO-548. Python client should handle CLIENT handshake match status
    correctly. (hammer)

    AVR0-555 Missing license headers in some ruby source
    files. (jmhodges)

    AVRO-554 Fixing syncing in ruby data file writing. (Grant Rodgers
    via jmhodges)

    AVRO-562 ruby side had busted client handshaking. (jmhodges)

Avro 1.3.3 (Unreleased)

  BUG FIXES
 
    AVRO-517. Resolving Decoder fails in some cases. (thiru) 

    AVRO-524. DataFileWriter.appendTo leads to intermittent
    IOException during write() (thiru)

    AVRO-499. Java: Fix protocol reflection to reject interfaces with
    multiple methods of the same name.  (cutting)

Avro 1.3.2 (31 March 2010)

  IMPROVEMENTS

    AVRO-449. CMake-based build system for Avro/C (Bruce Mitchener via massie)

    AVRO-418. avro.h generates errors when included in C++ code 
    (Bruce Mitchener via massie)

    AVRO-480. avro_flush() is in the header, but not implemented
    (Bruce Mitchener via massie)
